flapivor/tests/tests-m3/hopix/typechecker/bad/arith3.hopix
val x : int = 1 + 1 * 3
val y : int = z / 2 - 3